[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quaac"
dynamic = [
   "version"  # this will be set by hatch
]
license = "MIT"
authors = [
  { name="James Kerns", email="jkerns100@gmail.com" },
]
description = "A package for reading and writing QuAAC files."
readme = "README.rst"
requires-python = ">=3.8"
dependencies = [
    "pydantic[email] >= 2.0.0",
    "email-validator",
    "pyyaml",
    "eval-type-backport; python_version<='3.9'",
    "typing-extensions>=4.12.2; python_version<'3.9'",
    "annotated-types>=0.7.0",
    "pydantic-core>=2.23.4",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/jrkerns/quaac"
Issues = "https://github.com/jrkerns/quaac/issues"

[tool.hatch.version]
# https://hatch.pypa.io/latest/version/
path = "quaac/version.py"  # hatch will automatically set the version to the value in this file.

[tool.uv]
dev-dependencies = [
    'hatch',
    'sphinx',
    'sphinx-autobuild',
    'nox',
    "twine>=5.1.1",
    "pytest>=8.3.3",
]
